* Fixed Issue 28: RrdPool requestRrdDb not freeing RrdEntry on error
* Fixed Issue 29: add support for horizontal and vertical spans
* Fixed Issue 31: improve support for logarithmic axis
* Fixed Issue 32: Error adding datasources when rrd file is not is the the same filesystem as /tmp
* Fixed Issue 37: when stacking data sources, having data with NaN creates a broken graph
* Fixed Issue 38: Data Wrong in XML
* A few improvements to graph rendering

Changes in version 2.1.1 - 6 Dec 2011
----------------------------------------
* Invalid rrdtools file import

Changes in version 2.1 - 24 Nov 2011
----------------------------------------
* Fixed Issue 1: Key colours don't match the graph when using transparency
* Fixed Issue 10: some parts of this code has GPL license?
* Fixed Issue 12: Make RrdMemoryBackend better extensible
* Fixed Issue 13: RrdGraphConstants FontConstructor should close InputStream
* Fixed Issue 16: Released *.jar contain no class files
* Fixed Issue 11: rrdDb.createFetchRequest.fetchData.getAggregate(Total) does not return the correct value for step sizes other than 1.
* Implemented Issue 15: Support for version 0003
* Minor fixes and improvements.

Changes in version 2.0.7 - 22 March 2011
----------------------------------------

* Added RrdToolkit.addDataSources(..)
* Various minor fixes
* Added support for ATAN, ATAN2, DEG2RAD, RAD2DEG, NE.
* Added a n-th percentile in RrdGraphDef (Bacchella Fabrice)
* Fixed issue 9
* Fixed issue with fetch request resolution (Patrick Lightbody)

 Changes in version 2.0.6 - 12 Jan 2011
--------------------------------------
Major changes:

* Migrated to Google Code (http://code.google.com/p/rrd4j)
* Changed license to Apache License, Version 2.0
* Requires JDK 1.6
* Fixed aggregation of TOTAL
* MongoDB backend (see http://www.mongodb.org/)
* Removed JDK selection logic for the default factory - NIO is the default one

Minor changes:
