@@ -280,7 +280,7 @@ public class RrdGraph implements RrdGraphConstants {
     private void drawAxis() {
         if (!gdef.onlyGraph) {
             Paint gridColor = gdef.colors[COLOR_GRID];
-            Paint fontColor = gdef.colors[COLOR_FONT];
+            Paint xaxisColor = gdef.colors[COLOR_XAXIS];
             Paint arrowColor = gdef.colors[COLOR_ARROW];
             Stroke stroke = new BasicStroke(1);
             worker.drawLine(im.xorigin + im.xsize, im.yorigin, im.xorigin + im.xsize, im.yorigin - im.ysize,
@@ -288,7 +288,7 @@ public class RrdGraph implements RrdGraphConstants {
             worker.drawLine(im.xorigin, im.yorigin - im.ysize, im.xorigin + im.xsize, im.yorigin - im.ysize,
                     gridColor, stroke);
             worker.drawLine(im.xorigin - 4, im.yorigin, im.xorigin + im.xsize + 4, im.yorigin,
-                    fontColor, stroke);
+                    xaxisColor, stroke);
             worker.drawLine(im.xorigin, im.yorigin, im.xorigin, im.yorigin - im.ysize,
                     gridColor, stroke);
             worker.drawLine(im.xorigin + im.xsize + 4, im.yorigin - 3, im.xorigin + im.xsize + 4, im.yorigin + 3,
